FIxing the spacing issue in the card

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,9 +97,9 @@ header h1 {
   color: #6d708d; }
 
 .card {
-  max-width: 20rem;
-  width: 20rem;
-  padding: 1.6rem;
+  max-width: 23rem;
+  width: 23rem;
+  padding: 2.5rem;
   background-color: #fff;
   border-radius: 10px;
   color: #6d708d;
