--- a/sass/components.scss
+++ b/sass/components.scss
@@ -11,9 +11,9 @@ header {
   @media screen and (max-width: 375px) {
     width: 97%;
   }
-  max-width: 20rem;
-  width: 20rem;
-  padding: 1.6rem;
+  max-width: 23rem;
+  width: 23rem;
+  padding: 2.5rem;
   background-color: $card-bg;
   border-radius: 10px;
   color: $grayish-blue;
